--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test node --test",
     "start": "cross-env NODE_ENV=production nodemon index.js",
-    "dev": "cross-env NODE_ENV=development node index.js"
+    "dev": "cross-env NODE_ENV=development node index.js",
+    "start:env": "NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
