--- a/part7/bloglist/backend/package.json
+++ b/part7/bloglist/backend/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test node --test",
-    "start": "cross-env NODE_ENV=production nodemon index.js",
-    "dev": "cross-env NODE_ENV=development node index.js",
-    "start:test": "NODE_ENV=test node index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start:test": "NODE_ENV=test node index.js",
+    "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend"
   },
   "keywords": [],
   "author": "",
