Create calculateExercises function

--- a/part9/BMI/package.json
+++ b/part9/BMI/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "ts-node": "ts-node",
-    "calculateBmi":"ts-node bmicalculator.ts"
+    "calculateBmi": "ts-node bmicalculator.ts",
+    "calculateExercise": "ts-node exercisecalculator.ts"
   },
   "keywords": [],
   "author": "",
