--- a/part9/BMI/package.json
+++ b/part9/BMI/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmicalculator.ts",
     "calculateExercises": "ts-node exercisecalculator.ts"
@@ -12,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@types/node": "^22.5.5",
+    "express": "^4.21.0",
     "save-dev": "^0.0.1-security"
   }
 }
